--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="wrapper">
-      <!-- <h2>Stopwatch</h2>
-      <h3>Vanilla JavaScript Stopwatch</h3> -->
+      <h2 id="header2"></h2>
+      <h3 id="header3"></h3>
       <p><span id="seconds">00</span>:<span id="tens">00</span></p>
       <button id="button-start">Start</button>
       <button id="button-stop">Stop</button>
